### Voltaire's Nightmare Changelog ###

# v 2.2.2 #

-Small fixes for the following mission trees: Brandenburg
-Added 1 new estate privilege: 1 burghers privilege for Dutch nations

# v 2.2.1 #

-Added the following new mercenary companies: Armagnacs, Latvian Mercenaries, Estonian Warriors
-Added 2 new estate privileges: 1 clergy privilege for Pagans, 1 nobility privilege for Georgia
-Small fixes for the following mission trees: Austria, Sweden, France, Aquitaine, Papal States, Altsachsen, Brandenburg
-Overhauled the following custom event sets: Bogomilist
-Added the following alternative country names: Meshchera (Qasim)
-Changed the following flags: Cambrai, Schaffhausen, Slovenia, Nice, Plesse, Stavelot-Malmedy, Thorn, Worms, Ziegenhain, Cornelimunster
-Fixed major bug causing the Factionalism of the Rus disaster to trigger multiple times
-Fixed the Russian reform triggers, also fixing forming Russia/Ruthenia through reforms
-Fixed forming Switzerland not giving new NIs
-Aromanian moved from Byzantine culture group to Romanian group and now starts with more provinces
-Cypriot culture reworked into Pamphylian and now covers the southern coast of Anatolia
-Other minor changes to culture setup in Byzantium and Southern Italy
-Improved the decisions for TO/LO to establish dioceses
-Fixed heir stats of Germanic monarchies
-Turks now always cease raiding Byzantium's provinces when Crisis of the 11th Century is averted
-Added more mission events for France to optionally release Revolutionary-era tags in Italy as vassal states
-Changed New England's country name to reflect its Anglo-Saxon roots
-Silesia can now only balkanise at least 10 years after the Fragmentation of Poland disaster fires
-The Old Saxon split benefactor now only receives Electorate if Old Saxony had it previously
-Some untriggerable Harmonization events will now trigger correctly