@@ -1,4 +1,4 @@
-version="2.2.0"
+version="2.2.2"
 tags={
 	"Map"
 	"Religion"
