@@ -102,5 +102,10 @@
  LOADING_TIP_100: "This game takes a long time to master, don't be surprised to be learning new things after playing a thousand hours."
  LOADING_TIP_101: "You might lose a battle (or more), but still win the war.\nIt's often worth fighting on after suffering initial setbacks in a war."
  LOADING_TIP_102: "The Holy Roman Emperor can only demand Unlawful Territory after the Hofgericht is reformed."
- LOADING_TIP_103: "The Kievan Rus must pass reforms to centralize."
+ LOADING_TIP_103: "The Grand Prince of the Kievan Rus must pass reforms to centralize."
  LOADING_TIP_104: "Before the Reformation, there are six early heresy waves."
+ LOADING_TIP_105: "There are twelve different Crusades that can be called by the Pope for different regions."
+ LOADING_TIP_106: "The Black Death can seriously affect your nation's development.\nMake sure you embrace Public Health quickly!"
+ LOADING_TIP_107: "After the Black Death has passed, plagues keep returning until you embrace Industrialism."
+ LOADING_TIP_108: "It is not possible to fabricate claims on nations with Native governments until they have reformed into a Tribe."
+ LOADING_TIP_109: "Invading nations such as the Seljuks and Mongols have strong modifiers to compensate for their off-map lands."
