@@ -4,6 +4,7 @@
 
 -Small fixes for the following mission trees: Brandenburg
 -Added 1 new estate privilege: 1 burghers privilege for Dutch nations
+-Added 5 more loading tips
 
 # v 2.2.1 #
 
